# RTPlotter

./: .gitignore  CMakeLists.txt  LICENSE  PACKAGING.md  README.md  sample.csv  sample.rtp
resources/: resources.qrc
resources/icons/: RTPlotter.icns
scripts/: package-linux-appimage.sh  package-mac.sh
src/: CSVReader.cpp  CSVReader.h  FileWatcher.cpp  FileWatcher.h  MainWindow.cpp  MainWindow.h  ParserConfigDialog.cpp  ParserConfigDialog.h  PlotConfigDialog.cpp  PlotConfigDialog.h  PlotManager.cpp  PlotManager.h  main.cpp
ui/: MainWindow.ui  ParserConfigDialog.ui  PlotConfigDialog.ui
